--- a/recuperar.html
+++ b/recuperar.html
@@ -54,7 +54,7 @@
         
           // Objeto con estructura JSON
         var objetoUsuario = { 'usuario': usuario}
-        var url = "http://localhost:3000/usuario/" + usuario
+        var url = "https://proyecto2-201115455.herokuapp.com/usuario/" + usuario
         
         fetch(url)
         .then(res => res.json())   //variable respuesta guardará lo que recibe como respuesta en formato JSON si sale bien la API
